overflow bug

--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -287,6 +287,10 @@ form[role=search] {
 .left-off-canvas-menu {
   box-shadow: 5px 5px 0 0 rgba(80,80,80,0.3);
 
+  @media #{$m-up} {
+    overflow: visible;
+  }
+
   h1 {
     @extend %medium-grotesque-h;
     letter-spacing: 0.08em;
